...
              Divider(),
              SizedBox(height: 15),
              StreamBuilder<String>(
                  stream: signupBloc.lastName$,
                  builder: (context, snapshot) {
                    return TextField(
                        key: Key("last_name_textfield"),
                        onChanged: signupBloc.lastName.sink.add,
                        decoration: InputDecoration(
                          errorText: snapshot.error as String?,
                          contentPadding: EdgeInsets.only(
                              left: 15, bottom: 11, top: 11, right: 15),
                          prefixIcon: Icon(
...
                  }),
              SizedBox(height: 10),
              StreamBuilder<String>(
                  stream: signupBloc.firstName$,
                  builder: (context, snapshot) {
                    return TextField(
                        key: Key("first_name_textfield"),
                        onChanged: signupBloc.firstName.sink.add,
                        decoration: InputDecoration(
                          errorText: snapshot.error as String?,
                          contentPadding: EdgeInsets.only(
                              left: 15, bottom: 11, top: 11, right: 15),
                          prefixIcon: Icon(
...
                  }),
              SizedBox(height: 10),
              StreamBuilder<String>(
                  stream: signupBloc.email$,
                  builder: (context, snapshot) {
                    return TextField(
                        key: Key("email_textfield"),
                        onChanged: signupBloc.email.sink.add,
                        keyboardType: TextInputType.emailAddress,
                        decoration: InputDecoration(
                          errorText: snapshot.error as String?,
                          contentPadding: EdgeInsets.only(
                              left: 15, bottom: 11, top: 11, right: 15),
...
                  }),
              SizedBox(height: 15),
              StreamBuilder<DateTime>(
                  stream: signupBloc.dateOfBirth$,
                  builder: (context, AsyncSnapshot<DateTime> snapshot) {
                    return ListTile(
                      key: Key("choose_date_button"),
                      autofocus: false,
                      onTap: () async {
                        DateTime date = await showCupertinoModalBottomSheet(
                          expand: false,
                          context: context,
                          builder: (context) => ChooseDatePage(
...
                          fontSize: 15))),
              SizedBox(height: 10),
              StreamBuilder<Adress>(
                  stream: signupBloc.adress$,
                  builder: (context, AsyncSnapshot<Adress> snapshot) {
                    return ListTile(
                      key: Key("search_adress_button"),
                      autofocus: false,
                      onTap: () async {
                        this.adress = await showCupertinoModalBottomSheet(
                          expand: false,
                          context: context,
                          builder: (context) => HomeSearchPage(
...
              ListTile(
                autofocus: false,
                leading: StreamBuilder<bool>(
                    stream: signupBloc.acceptedPolicies$,
                    builder: (context, snapshot) {
                      return Checkbox(
                          key: Key("checkboxTerms"),
                          activeColor: Colors.green,
                          value: snapshot.data != null
                              ? snapshot.data
                              : signupBloc.acceptedPolicies.value,
                          onChanged: (value) => signupBloc.acceptedPolicies.sink
                              .add(value ?? false));
...
              ),
              SizedBox(height: 40),
              StreamBuilder<bool>(
                  stream: signupBloc.isAllFilled$,
                  builder: (context, AsyncSnapshot<bool> snapshot) {
                    return StreamButton(
                        key: Key("signup_button"),
                        buttonColor:
                            snapshot.data != null && snapshot.data != false
                                ? Colors.black
                                : Colors.grey,
                        buttonText: 'signup.createAccount'.tr(),
                        errorText: 'signup.createError'.tr(),
...
