...
                      shrinkWrap: true,
                      children: [
                        Container(
                                child: SingleChildScrollView(
                                scrollDirection: Axis.horizontal,
                                child: Row(
                                children: [Photo(file: pubprovider.file0, stream: pubprovider.file0$, key: Key("photo0"),), Photo(file: pubprovider.file1, stream: pubprovider.file1$, key: Key("photo1")), Photo(file: pubprovider.file2, stream: pubprovider.file2$, key: Key("photo2"))],
                              ),
                            )),
                            

                            SizedBox(height: 30),
                            Align(
...
                                  stream: pubprovider.pricePrefs.stream,
                                  builder: (context, snapshot) {
                                    if (snapshot.connectionState ==
                                        ConnectionState.waiting)
                                      return CircularProgressIndicator();
                                    return ChipsChoice<String>.multiple(
                                      key: Key("chips_choice"),
                                      spinnerColor: Color(0xFFF95F5F),
                                      wrapped: true,
                                      value: snapshot.data as List<String>,
                                      onChanged: (val) => setState(() => pubprovider.pricePrefs.add(val)),
                                      
                                      choiceItems: C2Choice.listFrom<String,
...
                            SizedBox(height: 10),

                            StreamBuilder<String>(
                              stream: pubprovider.name$,
                              builder: (context, snapshot) {
                                return TextField(
                                  key: Key("plate_name"),
                                  onChanged: pubprovider.name.add,
                                  decoration: InputDecoration(
                                    hintText: 'publish.nameHint'.tr(),
                                    fillColor: Colors.grey[200],
                                    filled: true,
                                    errorText: snapshot.error as String?,
...
                            SizedBox(height: 10),

                            StreamBuilder<String>(
                              stream: pubprovider.description$,
                              builder: (context, snapshot) {
                                return TextField(
                                  key: Key("plate_description"),
                                  onChanged: pubprovider.description.add,
                                    decoration: InputDecoration(
                                  hintText: 'publish.descriptionHint'.tr(),
                                  fillColor: Colors.grey[200],
                                  filled: true,
                                  errorText: snapshot.error?.toString(),
...
                                       const EdgeInsets.symmetric(horizontal: 5),
                                    child: StreamBuilder<Object>(
                                      initialData: pubprovider.priceall.value,
                                      stream: pubprovider.priceall$,
                                      builder: (context, snapshot) {
                                       return TextField(
                                         key: Key("plate_price"),
                                         keyboardType: TextInputType.number,
                                         onChanged: pubprovider.priceall.add,
                                         decoration: InputDecoration(
                                         hintText: 'publish.priceHint'.tr(),
                                         fillColor: Colors.grey[200],
                                         filled: true,
...
