...
                      color: Colors.grey),

                  child: StreamBuilder<Object>(
                    stream: bloc.code$,
                    builder: (context, snapshot) {
                      return TextField(
                        key:  Key("PhoneCodeTestField"),
                          onChanged: bloc.code.sink.add,
                          decoration: InputDecoration(
                            hintText: 'phone.codeHint'.tr(),
                            fillColor: Colors.grey[200],
                            filled: true,
                            border: OutlineInputBorder(
...


              StreamBuilder<String>(
                      stream: bloc.code.stream,
                      builder: (ctx, snapshot) {
                        return StreamButton(buttonColor: snapshot.data != null ? Colors.black : Colors.grey,
                          key: Key("phoneCodeButton"),
                          buttonText: 'phone.verifyCode'.tr(),
                          errorText: 'common.retry'.tr(),
                          loadingText: 'phone.verifying'.tr(),
                          successText: 'phone.verified'.tr(),
                          controller: _streamButtonController, onClick: () async {
                            if(snapshot.data != null) {
...
